--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h2{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
+    overflow: hidden;
     height: 300px;
 }
 
@@ -19,6 +20,7 @@ h2{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
+    overflow: hidden;
     height: 350px;
 }
 
